update resource policy

--- a/aws/infra/resources.yml
+++ b/aws/infra/resources.yml
@@ -43,9 +43,10 @@ Resources:
           ForwardedValues:
             QueryString: false
 
-  BucketAccessPolicy:
+  ResourceAccessPolicy:
     Type: AWS::IAM::Policy
     Properties:
+      PolicyName: !Sub ${StackName}-resource-access-policy
       Roles:
         - !Ref ServiceRole
       PolicyDocument:
