--- a/aws/infra/resources.yml
+++ b/aws/infra/resources.yml
@@ -69,6 +69,9 @@ Resources:
 
 Outputs:
 
+  Url:
+    Value: !Sub "https://${Cloudfront.DomainName}"
+
   DistributionId:
     Value: !Ref Cloudfront
 
