--- a/aws/infra/resources.yml
+++ b/aws/infra/resources.yml
@@ -10,7 +10,7 @@ Resources:
   WebBucket:
     Type: AWS::S3::Bucket
     Properties:
-      AccessControl: PublicRead
+      AccessControl: Private
       WebsiteConfiguration:
         IndexDocument: index.html
         ErrorDocument: error.html
