--- a/aws/infra/resources.yml
+++ b/aws/infra/resources.yml
@@ -61,6 +61,7 @@ Resources:
               - s3:ListBucket
               - s3:DeleteObject
               - s3:PutObjectACL
+              - s3:ListObjectsV2
           - Resource:
               - !Sub arn:aws:cloudfront::${AWS::AccountId}:distribution/${Cloudfront}
             Effect: Allow
