--- a/aws/infra/resources.yml
+++ b/aws/infra/resources.yml
@@ -52,16 +52,16 @@ Resources:
       PolicyDocument:
         Statement:
           - Resource:
+              - !Sub ${WebBucket.Arn}
               - !Sub ${WebBucket.Arn}/*
             Effect: Allow
             Action:
+              - s3:DeleteObject
               - s3:GetObject
-              - s3:PutObject
               - s3:GetObjectVersion
               - s3:ListBucket
-              - s3:DeleteObject
+              - s3:PutObject
               - s3:PutObjectACL
-              - s3:ListObjectsV2
           - Resource:
               - !Sub arn:aws:cloudfront::${AWS::AccountId}:distribution/${Cloudfront}
             Effect: Allow
