--- a/aws/buildspec/lambda.yml
+++ b/aws/buildspec/lambda.yml
@@ -20,12 +20,12 @@ phases:
         aws cloudformation package \
           --template-file aws/infra/resources.yaml \
           --s3-bucket $BUILD_OUTPUT_BUCKET \
-          --output-template-file app-output-sam.yaml
+          --output-template-file resources.yaml
   post_build:
     commands:
       - echo "build completed on `date`"
 
 artifacts:
   files:
-    - app-output-sam.yaml
+    - resources.yaml
   discard-paths: yes
