--- a/aws/cloudformation.yml
+++ b/aws/cloudformation.yml
@@ -269,7 +269,7 @@ Resources:
                 RoleArn: !GetAtt CloudformationServiceRole.Arn
                 StackName: !Sub ${AWS::StackName}-resource
                 TemplatePath: LambdaBuild::resources.yml
-                Capabilities: CAPABILITY_IAM
+                Capabilities: 'CAPABILITY_IAM,CAPABILITY_AUTO_EXPAND'
                 OutputFileName: resources.json
                 ParameterOverrides: !Sub
                   - |
