--- a/aws/infra/resources.yml
+++ b/aws/infra/resources.yml
@@ -84,6 +84,7 @@ Resources:
             Effect: Allow
             Action:
               - cloudfront:CreateInvalidation
+              - cloudfront:UpdateDistribution
 
   LambdaEdgeFunctionRole:
     Type: AWS::IAM::Role
