--- a/aws/buildspec/deploy.yml
+++ b/aws/buildspec/deploy.yml
@@ -3,5 +3,5 @@ version: 0.2
 phases:
   post_build:
     commands:
-      - aws s3 sync ./dist $BUCKET_NAME --delete --acl=public-read
+      - aws s3 sync "${CODEBUILD_SRC_DIR}_${INPUT_SOURCE}" $BUCKET_NAME --delete --acl=public-read
       - aws cloudfront create-invalidation --distribution-id $DISTRIBUTION_ID --paths "/*"
