--- a/aws/infra/resources.yml
+++ b/aws/infra/resources.yml
@@ -36,7 +36,8 @@ Resources:
           - 0
           - Ref: Aliases
       ValidationMethod: DNS
-      SubjectAlternativeNames: Ref! Aliases
+      SubjectAlternativeNames:
+        Ref: Aliases
 
   ViewerRequestLambdaFunction:
       Type: AWS::Serverless::Function
