--- a/aws/cloudformation.yml
+++ b/aws/cloudformation.yml
@@ -142,6 +142,12 @@ Resources:
               - Resource: "*"
                 Effect: Allow
                 Action: 
+                  - acm:RequestCertificate
+                  - acm:DeleteCertificate
+                  - acm:DescribeCertificate
+              - Resource: "*"
+                Effect: Allow
+                Action: 
                   - lambda:GetFunction
                   - lambda:CreateFunction
                   - lambda:UpdateFunctionCode
